--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,14 +1,16 @@
 {
   "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite"
   },
-  "devDependencies": {
-    "vite": "^5.0.0"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "vite": "^5.0.5"
   }
 }
